--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,11 @@
+
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Raleway:wght@300&family=Space+Grotesk:wght@700&display=swap');
+
 *,*:after,*:before {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family:  poppins;
+  font-family: 'IBM Plex Sans', sans-serif;
   /* font-size: 10px; */
  }
 .App{
@@ -13,6 +16,167 @@
 
 button:hover{
   cursor: pointer;
+}
+ .firstHeader{
+  position: relative;
+  margin: 2.5rem 0;
+  padding-bottom: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #EAECF0;
+
+ }
+.numberTwo{
+  position: absolute;
+  top: 27px;
+  right: -11px;
+  text-align: center;
+  height: 20px;
+  width: 20px;
+  color: #FFFFFF;
+  font-size: .8rem;
+  background-color: red;
+  border-radius: 50%;
+  line-height: 21px;
+  display: block;
+}
+
+ .banner{
+  height: 50vh;
+  position: relative;
+  border: 1px solid #EAECF0;
+  padding: 0 1.3rem;
+  background: #FFFFFF;
+  box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 1px 2px rgba(16, 24, 40, 0.06);
+  border-radius: 12px;
+  margin: 2rem 0;
+ }
+
+ .Bg{
+  position: relative;
+  background: linear-gradient(to right, blueviolet, #ed8f50);
+  height: 192px;
+  /* left: -112px; */
+  top: 20px;
+  padding: 2rem;
+  border-radius: 12px;
+ }
+
+.bigCircle{
+  /* text-align: center;
+  height: 100px;
+  width: 100px;
+  background-color: #EAECF0;
+  border: 4px solid #FFFFFF;
+  box-shadow: 0px 12px 16px -4px rgba(16, 24, 40, 0.08), 0px 4px 6px -2px rgba(16, 24, 40, 0.03);
+  border-radius: 50%;
+  line-height: 100px; */
+}
+
+
+.mainBanner{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  position: relative;
+  bottom: 30px;
+  left: 20px;
+}
+
+.mainBannerFlex{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mainBannerFlex .smallLi{
+  font-size: .7rem;
+  font-weight: 500;
+  line-height: 20px;
+  position: relative;
+  top: 30px;
+  right: 256px;
+  display: flex;
+}
+
+.mainBannerFlex p {
+  font-weight: 700;
+  margin-left: .2rem;
+}
+
+.popOne{
+  background: #f7e3d8;
+  color: #F79009;
+  margin-right: .5rem;
+  padding: .1rem .5rem .1rem 1.2rem;
+  border-radius: 12px;
+  position: relative;
+}
+
+.popOne:after{
+  border-radius: 50%;
+  position: absolute;
+  bottom: 10px;
+  left: 8px;
+  content: '';
+  background: #F79009;
+  width: 6px;
+  height: 6px;
+  display: block;
+}
+
+.cardOverallBackground{
+  margin: 0 auto;
+  /* max-width: 1200px; */
+  border: 1px solid #EAECF0;
+  border-radius:10px;
+  background: #FFFFFF;
+  border: 1px solid #EAECF0;
+  box-shadow: 0px 1px 3px rgba(16, 24, 40, 0.1), 0px 1px 2px rgba(16, 24, 40, 0.06);
+  border-radius: 12px
+}
+
+.cardHeading{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: .5rem 0;
+  margin: 1rem 1rem;
+  border-bottom: 1px solid #EAECF0;
+}
+
+.feature, .dataTitle, .dataBid span{
+  font-weight: 600;
+}
+
+.cardHeading button, .mainBanner button{
+  outline: 0;
+  border: 0;
+  background: #FFFFFF;
+  border: 1px solid #D0D5DD;
+  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+  border-radius: 8px;
+  width: 90px;
+  height: 30px;
+  display: flex;
+  color:#344054;
+  ;
+  justify-content: center;
+  align-items: center;
+  border-radius: 12px;
+}
+
+.mainBanner button{
+  width: 120px;
+  height: 35px;
+  font-size: .7rem;
+  margin-right: 4rem;
+}
+
+.thumbsup{
+  margin-right: 10px;
 }
 
 .cardBackground{
@@ -72,19 +236,21 @@ button:hover{
 }
 
 .koray{
+  color: #344054;
   display: flex;
   margin: 0 .4rem;
 }
 
 .bidder{
   display: flex;
-  
 }
+
 .dataTitle{
   font-size: .7rem;
-  margin: .4rem 0;
+  /* margin: .4rem 0; */
   /* width: 100px; */
   height: 30px;
+  line-height: 20px;
 }
 .dataBid{
   margin: .3rem 0 ;
@@ -92,10 +258,12 @@ button:hover{
   border-bottom: 1px solid #EAECF0;
   margin: .5rem 0;
   padding: .5rem 0;
+  line-height: 20px;
 }
 
 .bidder{
-  color: #F2F4F7;
+  color: #98A2B3;
+  font-weight: 500;
 }
 .dataButton{
   background: #004CCC;
@@ -106,5 +274,4 @@ button:hover{
   width: 100%;
   height: 40px;
   border-radius: 12px;
-  font-family: poppins;
 }
